Login Page Done

--- a/src/Pages/Home/Quote/Quote.css
+++ b/src/Pages/Home/Quote/Quote.css
@@ -3,7 +3,7 @@
     color: black;
     border-width: 1px solid;
     border-radius: 10px;
-    box-shadow: 5px 5px 5px 5px black;
+    box-shadow: 5px 5px 5px  black;
 }
 
 
