--- a/src/Pages/Home/Ideas/Ideas.css
+++ b/src/Pages/Home/Ideas/Ideas.css
@@ -9,6 +9,20 @@
     border-color: black;
 }
 .ideas-container{
-   padding-top: 300px;
-    
+    position: relative;
+  text-align: center;
+  color: white;
 }
+
+.idea-container{
+    
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      
+}
+
+
+  
+  
