--- a/src/Pages/Home/Membership/Membership.css
+++ b/src/Pages/Home/Membership/Membership.css
@@ -1,6 +1,7 @@
 .membership-container{
    display: flex;
    padding: 30px;
+   background-image: linear-gradient(#0F2027, #203A43, #2C5364);
 
 
 }
