--- a/src/Pages/Register/Register.css
+++ b/src/Pages/Register/Register.css
@@ -1,9 +1,12 @@
 .form-container{
+    background-image: linear-gradient(#0F2027, #203A43, #2C5364);
     width: 600px;
     margin: 0 auto;
+    margin-top: 30px;
     padding: 30px;
     border: 1px solid black;
     box-sizing: border-box;
+    box-shadow: 5px 5px 5px 5px black;
     border-radius: 8px;
     display: flex;
     justify-content: center;
