--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -17,9 +17,11 @@
     
     border: 2px solid black;
     border-radius: 5px;
-    background-color: rgb(184, 56, 77);
+    background-image: linear-gradient(#c31432, #240b36);
+    
 }
 .login-btn:hover{
-    background-color: rgb(134, 29, 46);
+    
+    background-image: linear-gradient(#c04848, #480048);
     border-color: black;
 }
