--- a/src/Pages/Home/Description/Description.css
+++ b/src/Pages/Home/Description/Description.css
@@ -2,19 +2,21 @@
     width: 100%;
    
 }
+
  .profile-button{
     color: white;
-    background-color: rgb(55 65 81);
+    background-image: linear-gradient(#c31432, #240b36);
+    
     border-color: black;
  }
 
  .profile-button:hover{
     color: white;
-    background-color:rgb(39, 35, 35) ;
+    background-image: linear-gradient(#c04848, #480048);
  }
 
  .profile-card{
-    background-color: rgb(184, 56, 77);
+   background-image: linear-gradient(#780206, #061161);
  }
 
  .content-buttons{
@@ -23,6 +25,12 @@
  }
  .description-container{
    background-image: linear-gradient(#0F2027, #203A43, #2C5364);
+   
+ }
+ .title-container{
+   align-items: center;
+   display: flex;
+   justify-content: center;
  }
  @media only screen and (min-width:577px) and (max-width:992px){
     .description-container{
