--- a/src/Pages/Home/Ideas/Ideas.css
+++ b/src/Pages/Home/Ideas/Ideas.css
@@ -2,10 +2,10 @@
     border: 2px solid;
     border-radius: 5px;
     border-color: black;
-    background-color: rgb(184, 56, 77);
+    background-image: linear-gradient(#c04848, #480048);
 }
 .discover:hover{
-    background-color: rgb(134, 29, 46);
+    background-image: linear-gradient(#c31432, #240b36);
     border-color: black;
 }
 .ideas-container{
