--- a/src/Pages/Home/Vlogs/Vlogs.css
+++ b/src/Pages/Home/Vlogs/Vlogs.css
@@ -1,10 +1,11 @@
 .vlog-btn{
-    border: 2px solid;
+    border: 2px solid black;
     border-radius: 5px;
-    background-color: rgb(184, 56, 77);
+    background-image: linear-gradient(#c04848, #480048);
+
 }
 .vlog-btn:hover{
-    background-color: rgb(134, 29, 46);
+    background-image: linear-gradient(#c31432, #240b36);
     border-color: black;
 }
 
@@ -12,4 +13,12 @@
     margin: 8px;
     grid-gap:20px;
 
+}
+.card-container{
+    color: white;
+    background-image: linear-gradient(#0F2027, #203A43, #2C5364);
+    box-sizing: border-box;
+    box-shadow: 5px 5px 5px 5px black;
+    border-radius: 8px;
+    
 }
